--- a/task.html
+++ b/task.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="table">
         <table>
             <thead>
                 <tr style="background-color: aqua;">
@@ -52,8 +52,8 @@
             </tbody>
         </table>
 
-    <hr>
-    
+    <hr class="hr">
+
     </div>
     <div class="tes">
         <fieldset>
